fix story and spacing

--- a/src/components/ExpandableText/ExpandableText.scss
+++ b/src/components/ExpandableText/ExpandableText.scss
@@ -1,13 +1,17 @@
 .ExpandableText {
     display: flex;
     flex-direction: column;
-    gap: var(--spacing-5x);
+    gap: var(--spacing-200);
     align-items: flex-start;
 
     &__content {
         text-overflow: ellipsis;
         overflow: hidden;
         transition: height var(--transition-duration) ease;
+    }
+
+    &__button {
+        margin-top: var(--spacing-200);
     }
 
     &__buttonArrow {
